test/compile_errors/err_align_less_than_natural.w
//! expect-error: alignment is less than natural alignment of type

type S {
    @[align(1)] x: i32,
}

fn main:
    print("x")
